--- a/.github/workflows/deploy-oci-docker.yml
+++ b/.github/workflows/deploy-oci-docker.yml
@@ -16,6 +16,7 @@ jobs:
           username: ${{ secrets.OCI_USER }}
           key: ${{ secrets.OCI_SSH_KEY }}
           port: 22
+          command_timeout: 60m
           script: |
             set -e
 
